--- a/FoundryBookWeb/src/main/webapp/WEB-INF/web.xml
+++ b/FoundryBookWeb/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 
     <display-name>Gradle + Spring MVC Hello World + XML</display-name>
     <description>Spring MVC web application</description>
-
+      
     <!-- For web context -->
     <servlet>
         <servlet-name>hello-dispatcher</servlet-name>
@@ -32,12 +32,28 @@
             org.springframework.web.context.ContextLoaderListener
         </listener-class>
     </listener>
+    	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>
+			/WEB-INF/spring-security.xml
+		</param-value>
+	</context-param>
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>/WEB-INF/spring-core-config.xml</param-value>
     </context-param>
-        
+        	<!-- Spring Security -->
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy
+		</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
     <session-config>
         <session-timeout>
             30
