--- a/common.gradle
+++ b/common.gradle
@@ -21,6 +21,11 @@ repositories {
 dependencies {
     // Adding dependencies here will add the dependencies to each subproject.
     compile 'org.springframework:spring-core:4.3.8.RELEASE'
+    compile 'org.aspectj:aspectjrt:1.7.4'
+    compile 'org.slf4j:slf4j-api:1.7.5'
+    compile 'org.slf4j:jcl-over-slf4j:1.7.5'
+    compile 'org.slf4j:slf4j-log4j12:1.7.5'
+    compile 'log4j:log4j:1.2.15'
     testCompile group: 'junit', name: 'junit', version: '4.10'
 }
 
